<package>
  <name>motor_controller</name>
  <version>0.0.0</version>
  <description>Robot motor controller</description>
<license>BSD</license>

  <author email="kwahl@kth.se">Kristian Wahlqvist</author>
  <maintainer email="kwahl@kth.se">Kristian Wahlqvist</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pid</build_depend>
  <build_depend>phidgets</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pid</run_depend>
  <run_depend>phidgets</run_depend>

</package>
